--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   pin_code_fields: ^8.0.1
   carousel_slider: ^5.0.0
+  dio: ^5.8.0+1
 
 
 dev_dependencies:
