--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   pin_code_fields: ^8.0.1
   carousel_slider: ^5.0.0
   dio: ^5.8.0+1
+  loading_animation_widget: ^1.3.0
+  flutter_secure_storage: ^9.2.4
 
 
 dev_dependencies:
