--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   dio: ^5.8.0+1
   loading_animation_widget: ^1.3.0
   flutter_secure_storage: ^9.2.4
+  shared_preferences: ^2.5.1
+  flutter_rating_bar: ^4.0.1
+  url_launcher: ^6.3.1
 
 
 dev_dependencies:
