--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   google_maps_flutter: ^2.10.0
   cached_network_image: ^3.4.1
   image_picker: ^1.1.2
+  geolocator: ^13.0.2
+  intl: ^0.20.2
 
 
 dev_dependencies:
