--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,11 +51,18 @@ dependencies:
   image_picker: ^1.1.2
   geolocator: ^13.0.2
   intl: ^0.20.2
+ 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.3
+
+flutter_icons:
+  android: true  # Set to true to generate icons for Android
+  ios: true      # Set to true to generate icons for iOS
+  image_path: "assets/icon/icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -79,6 +86,7 @@ flutter:
   assets:
     - assets/images/
     - assets/fonts/
+    - assets/icon/
   fonts:
     - family: Jakarta 
       fonts:
